<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="empty_view_title_text">There are no products…</string>
    <string name="empty_view_subtitle_text">Press the plus icon to add some</string>
    <string name="detail_activity_title_new_product">Add a Product</string>
    <string name="detail_activity_title_edit_product">Edit Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="detail_insert_product_successful">Product saved</string>
    <string name="detail_insert_product_failed">Error with saving product</string>
    <string name="detail_update_product_successful">Product updated</string>
    <string name="detail_update_product_failed">Error with updating product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="detail_delete_product_successful">Product deleted</string>
    <string name="detail_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="category_name">Product Name</string>
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_update_quantity">Update Quantity</string>
    <string name="category_supplier_name">Supplier Name</string>
    <string name="category_supplier_phone_number">Supplier Phone</string>
    <string name="hint_product_name">Enter name</string>
    <string name="hint_product_price">Enter price</string>
    <string name="hint_product_quantity">Enter quantity</string>
    <string name="hint_supplier_name">Enter supplier</string>
    <string name="hint_supplier_phone_number">Enter phone number</string>
    <string name="sale">Sale</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="no_quantity">You already have no quantity</string>
</resources>
